test/libsolidity/syntaxTests/constants/redefinition_public_constant.sol
uint constant public c = 7;
uint constant public c = 8;
// ----
// DeclarationError 2333: (28-54): Identifier already declared.
